# music-crs-challenge

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/: technical-references.md
mymodule/: __init__.py  run_inference_blindset.py  run_inference_devset.py
mymodule/cv/: __init__.py  config.py  fold.py
mymodule/feature/: kvdb.py  ollama_embed.py  store.py  user_profile.py
mymodule/feature/config/: 3c3c859.yaml  428d339.yaml  4c34a0f.yaml  632c599.yaml  b8ee0d5.yaml  c55625d.yaml  f19c115.yaml
mymodule/feature/crawl/: __init__.py  __main__.py  cli.py  guardrails.py  jsonl.py  sources.py  talkpl.py
mymodule/strategies/: __init__.py  _aliases.py  base.py  ensemble.py
mymodule/strategies/pool/: __init__.py  base.py  bm25.py  ensemble.py  gbm.py  qemb.py  twotower.py
mymodule/strategies/rerank/: __init__.py  base.py  passthrough.py
mymodule/strategies/rerank/gbm/: __init__.py  _specs.py  build_features.py  feature_transforms.py  oof_features.py  pool_spec.py  target_encoding.py  train.py
mymodule/strategies/response/: __init__.py  base.py  base_dspy.py  fill_responses.py  noop.py
mymodule/strategies/response/auto/: __init__.py  generator.py  module.py  optimize.py  signature.py
mymodule/strategies/response/judge/: __init__.py  ensemble.py  judge.py  metric.py  (+1 more)
mymodule/strategies/twotower/: __init__.py  ann_index.py  doc_cache.py  encoder.py  eval.py  eval_ckpt.py  extract_pairs.py  hard_negative.py  pool.py  query_cache.py  query_summary.py  synth_doc.py  text_compose.py  train.py
mymodule/utils/: common_dspy.py  env.py  fusion.py  inference_parallel.py  log.py  path.py  seen.py  similarity.py  submission.py  tid.py
scripts/: evaluate_by_turn.py  package_submission.py
(+10 files in other folders)
