[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mymodule"
version = "0.1.0"
description = "Music-CRS Challenge 2026 (ACM RecSys 2026) - Conversational Music Recommendation System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.3",
    "datasets>=4.8.4",
    "dspy>=2.5",
    "duckdb>=1.5.2",
    "lancedb>=0.30.2",
    "loguru>=0.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.0",
    "python-toon>=0.1.3",
    "pytorch-lightning>=2.4",
    "rocksdict>=0.3",
    "scipy>=1.15.3",
    "spacy>=3.8.14",
    # spaCy English small model, declared as a direct wheel dependency so
    # `uv sync` installs it automatically (used by BM25 noun-tag extraction).
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "torch>=2.4.0",
    "tqdm>=4.67.3",
    "lightgbm>=4.6.0",
    "laion-clap>=1.1.5",
    "transformers>=5.8.0",
    "torchvision>=0.26.0",
    "click>=8.1.8",
    "pyyaml>=6.0",
    "gensim>=4.4.0",
    "implicit>=0.7.3",
    "llama-cpp-python>=0.3.23",
]

[tool.setuptools]
packages = ["mymodule"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "pytest>=8.0",
    "pytest-env>=1.6.0",
    "peft>=0.19.1",
]

[tool.pytest.ini_options]
# torch + lightgbm duplicate the OpenMP runtime on macOS; allow it to avoid segfaults.
env = [
    "KMP_DUPLICATE_LIB_OK=TRUE",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["mymodule"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
